--- a/_config.yml
+++ b/_config.yml
@@ -6,18 +6,18 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Hibbah
+email: wjy721@naver.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-lang: "en"
+lang: "ko"
 url: "https://hibbah.github.io" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
-disqus_username:
+twitter_username:
+github_username:  hibbah
+disqus_username:  hibbah
 
 # Build settings
 markdown: kramdown
