--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Username
+name: Hibbah
 
 # Short bio or description (displayed in the header)
-description: Programmer From Somewhere On Earth
+description: trash
 
 
 #
@@ -16,15 +16,15 @@ description: Programmer From Somewhere On Earth
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: agarwal.akshay.akshay8@gmail.com
+  email: wjy721@naver.com
   facebook:
   flickr:
-  github: AkshayAgarwal007
+  github: hibbah
   instagram:
-  linkedin: akshay-agarwal-782018a4
+  linkedin: hibbah
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: 
+  twitter:
   stackoverflow: # your stackoverflow profile, e.g. "users/3807565/akshay"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -45,7 +45,7 @@ url:
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: "/hibbah.github.io"
 
 #
 # !! You don't need to change any of the configuration flags below !!
