[신규테마] linkedin 프로필 주소 제거

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   flickr:
   github: hibbah
   instagram:
-  linkedin: 주현-원-16ab89137
+  linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter:
